fixing overflow-x hidden

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,15 @@
   font-family: "Eudoxus Sans", sans-serif;
   scroll-behavior: smooth;
 
+
 }
+
+@media screen and (max-width: 768px){
+  *{
+    overflow-x:clip;
+  }
+}
+
 
 html{
   background:rgb(26,35,46);
